--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <h1>Titulo de mi pagina</h1>
-        <p>Este es un parrafo</p>
+        <p>Este es un parrafo.</p>
     </main>
 </body>
 </html>
