feat: add a new sentence

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <h1>Titulo de mi pagina</h1>
         <p>Este es un parrafo.</p>
+        <p>Otro parrafo.</p>
     </main>
 </body>
 </html>
